kubernetes/app/mltb/mltb/base.httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mltb-base
spec:
  parentRefs:
    - name: default
      sectionName: http-wildcard
      namespace: gateway
  hostnames:
    - mltb.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mltb-mltb
          port: 80
